--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.6.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.6"
   }
 }
